added missing css and js files

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="SIT 725 prac 3">
     <meta property="og:type" content="website">
     <meta property="og:description" content="basic template for SIT 725 prac 3">
-    <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection" />
+    <link rel="stylesheet" href="./css/materialize.css" media="screen,projection" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -46,7 +46,7 @@
         </div>
     </div>
     <p class="center-align">
-        <button id="clickMeButton">Click Me</button>
+        <a class="waves-effect click-me-button btn waves-light" id="clickMeButton">Click Me</a>
     </p>
     </div>
     </div>
@@ -87,7 +87,7 @@
     </main>
     <div class="row">
         <div class="col s12 m6 l4">
-            <div class="card small">
+            <div class="card large">
                 <div class="card-image">
                     <img
                         src="https://t3.ftcdn.net/jpg/05/57/92/94/360_F_557929456_H0L12sooeJMSSnI98jMyqfzxd93dKOcP.jpg">
@@ -100,7 +100,7 @@
         </div>
 
         <div class="col s12 m6 l4">
-            <div class="card medium">
+            <div class="card large">
                 <div class="card-image">
                     <img src="https://i.pinimg.com/originals/8a/a4/42/8aa442697ec1eb3259c13380f4215ae8.jpg">
                 </div>
@@ -123,12 +123,11 @@
             </div>
         </div>
     </div>
-    <script src="js/materialize.js"></script>
+    <script src="./js/materialize.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>"></script>
     <script src="js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
         M.AutoInit();
     </script>
